--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,4 +9,5 @@
       <h1>{{title}}</h1>
       <a href="/">Home</a>
       <a href="/about">About</a>
+      <a href="/project">Project</a>
     </header>
